test/lit/lower-dsdl-serialization-union-missing-metadata-contract.mlir
// RUN: not %dsdl-opt --pass-pipeline='builtin.module(lower-dsdl-serialization)' %s 2>&1 | FileCheck %s

module {
  dsdl.schema @test_BadUnionPlan_1_0 attributes {full_name = "test.BadUnionPlan", major = 1 : i32, minor = 0 : i32, sealed} {
    dsdl.serialization_plan attributes {c_deserialize_symbol = "test__BadUnionPlan__deserialize_", c_serialize_symbol = "test__BadUnionPlan__serialize_", c_type_name = "test__BadUnionPlan", is_union, max_bits = 8 : i64, min_bits = 0 : i64, union_tag_bits = 8 : i64} {
      dsdl.io {alignment_bits = 8 : i64, array_capacity = 0 : i64, array_kind = "none", array_length_prefix_bits = 0 : i64, bit_length = 8 : i64, c_name = "opt", cast_mode = "truncated", kind = "field", max_bits = 8 : i64, min_bits = 8 : i64, name = "opt", scalar_category = "unsigned", type_name = "truncated uint8", union_option_index = 1 : i64, union_tag_bits = 8 : i64}
    }
  }
}

// CHECK: error: 'dsdl.serialization_plan' op union plan missing union_tag_bits/union_option_count metadata
